ui/tui/src/render/snapshots/hub_tui__render__tests__status_bar_review_picker_on_my_pr_offers_every_review.snap
---
source: ui/tui/src/render/mod.rs
expression: status_row(&buf)
---
 Review #1  [c] code · [f] fix · [m] comments · [Esc] cancel
