ui/tui/src/render/snapshots/hub_tui__render__tests__status_bar_right_partial_then_idle.snap
---
source: ui/tui/src/render/mod.rs
expression: status_row(&buf)
---
  · [↩] details · [n/N] new task · [p] prs · [O] issues · [e] errors · [/] sear
