ui/tui/src/render/snapshots/hub_tui__render__tests__status_bar_single_frame_ci_selected.snap
---
source: ui/tui/src/render/mod.rs
expression: status_row(&buf)
---
1/1 · [↩] open · [i] investigate
