ui/tui/src/render/snapshots/hub_tui__render__tests__status_bar_single_frame_expanded_group_child_selected.snap
---
source: ui/tui/src/render/mod.rs
expression: status_row(&buf)
---
 2/1 · [↩] details · [p] prs · [O] issues · [e] errors · [/] search · [i] investigate · [h] collapse
