ui/tui/src/render/snapshots/hub_tui__render__tests__status_bar_single_frame_failed.snap
---
source: ui/tui/src/render/mod.rs
expression: status_row(&buf)
---
  · [↩] details · [p] prs · [O] issues · [e] refresh failed: connection refused
