ui/tui/src/render/snapshots/hub_tui__render__tests__status_bar_single_frame_partial_state.snap
---
source: ui/tui/src/render/mod.rs
expression: status_row(&buf)
---
                                       ! source-a unreachable (updated unknown)
