ui/tui/src/render/snapshots/hub_tui__render__tests__task_creation_modal_all_fields_submit_focused.snap
---
source: ui/tui/src/render/mod.rs
expression: screen_text(&buf)
---
╭ All ─────────────────────────────────────────────────────────────────────────╮
│                                                                              │
│                                                                              │
│      ╭ Title ─────────────────────────────────────────────────────────╮      │
│      │Fix auth bug                                                    │      │
│      ╰────────────────────────────────────────────────────────────────╯      │
│      ╭ Description ───────────────────────────────────────────────────╮      │
│      │Auth is broken in prod                                          │      │
│      │                                                                │      │
│      │                                                                │      │
│      ╰────────────────────────────────────────────────────────────────╯      │
│      ╭ Kind  [Space] cycle ───────────────────────────────────────────╮      │
│      │  Debug                                                         │      │
│      ╰────────────────────────────────────────────────────────────────╯      │
│      ╭ Issue link ────────────────────────────────────────────────────╮      │
│      │https://github.com/org/repo/issues/1                            │      │
│      ╰────────────────────────────────────────────────────────────────╯      │
│      ╭────────────────────────────────────────────────────────────────╮      │
│      │  [ Ctrl+Enter to create ]                                      │      │
│      ╰────────────────────────────────────────────────────────────────╯      │
│                                                                              │
│                                                                              │
╰──────────────────────────────────────────────────────────────────────────────╯
  · [↩] details · [p] prs · [O] issues · [e] errors · [/] search
