ui/tui/src/render/snapshots/hub_tui__render__tests__task_creation_modal_blank_title_focused.snap
---
source: ui/tui/src/render/mod.rs
expression: screen_text(&buf)
---
╭ All ─────────────────────────────────────────────────────────────────────────╮
│                                                                              │
│                                                                              │
│      ╭ Title ─────────────────────────────────────────────────────────╮      │
│      │                                                                │      │
│      ╰────────────────────────────────────────────────────────────────╯      │
│      ╭ Description ───────────────────────────────────────────────────╮      │
│      │                                                                │      │
│      │                                                                │      │
│      │                                                                │      │
│      ╰────────────────────────────────────────────────────────────────╯      │
│      ╭ Kind  [Space] cycle ───────────────────────────────────────────╮      │
│      │  General                                                       │      │
│      ╰────────────────────────────────────────────────────────────────╯      │
│      ╭ Issue link ────────────────────────────────────────────────────╮      │
│      │                                                                │      │
│      ╰────────────────────────────────────────────────────────────────╯      │
│      ╭────────────────────────────────────────────────────────────────╮      │
│      │                             SUBMIT                             │      │
│      ╰────────────────────────────────────────────────────────────────╯      │
│                                                                              │
│                                                                              │
╰──────────────────────────────────────────────────────────────────────────────╯
  · [↩] details · [p] prs · [O] issues · [e] errors · [/] search
