ui/tui/src/render/snapshots/hub_tui__render__tests__task_creation_modal_seeded_from_ci_row.snap
---
source: ui/tui/src/render/mod.rs
expression: screen_text(&buf)
---
╭ All ─────────────────────────────────────────────────────────────────────────╮
│                                                                              │
│                                                                              │
│      ╭ Title ─────────────────────────────────────────────────────────╮      │
│      │org/hub: build / run tests                                      │      │
│      ╰────────────────────────────────────────────────────────────────╯      │
│      ╭ Description ───────────────────────────────────────────────────╮      │
│      │CI failure · org/hub                                            │      │
│      │workflow: CI                                                    │      │
│      │job: build / run tests                                          │      │
│      ╰────────────────────────────────────────────────────────────────╯      │
│      ╭ Kind  [Space] cycle ───────────────────────────────────────────╮      │
│      │Debug                                                           │      │
│      ╰────────────────────────────────────────────────────────────────╯      │
│      ╭ Link ──────────────────────────────────────────────────────────╮      │
│      │https://github.com/org/hub/actions/runs/99                      │      │
│      ╰────────────────────────────────────────────────────────────────╯      │
│      ╭────────────────────────────────────────────────────────────────╮      │
│      │                             SUBMIT                             │      │
│      ╰────────────────────────────────────────────────────────────────╯      │
│                                                                              │
│                                                                              │
╰──────────────────────────────────────────────────────────────────────────────╯
  · [↩] details · [n/N] new task · [p] prs · [O] issues · [e] errors · [/] sear
